src/objects/Incident_Person__c.object
<CustomObject>
    <description>List of people present/involved in incident.  NOT used for the person who is the subject of the incident.</description>
    <fields>
        <fullName>Incident__c</fullName>
        <description>incident this list is related to</description>
        <label>Incident</label>
        <referenceTo>Incident__c</referenceTo>
        <relationshipLabel>Incident People</relationshipLabel>
        <relationshipName>Incident_People</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mentor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mentor</label>
        <referenceTo>TMN_Contact__c</referenceTo>
        <relationshipLabel>Incident People</relationshipLabel>
        <relationshipName>Incident_People</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_people__c</fullName>
        <description>info about non TMN person present at incident</description>
        <label>Other Person(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Person_Type__c</fullName>
        <label>Person Type</label>
        <picklist>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Staff_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff Member</label>
        <referenceTo>TMN_User__c</referenceTo>
        <relationshipLabel>Incident People</relationshipLabel>
        <relationshipName>Incident_People</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Incident Person</label>
    <nameField>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incident People</pluralLabel>
    <recordTypes>
        <fullName>Mentor</fullName>
        <active>true</active>
        <label>Mentor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff</fullName>
        <active>true</active>
        <label>Staff</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Mentor_required</fullName>
        <active>true</active>
        <description>checks for blank value on mentor lookup when type = mentor</description>
        <errorConditionFormula>AND( ISPICKVAL(  Person_Type__c , &apos;Mentor&apos;), ISBLANK(  Mentor__c ))</errorConditionFormula>
        <errorMessage>Please choose a Mentor</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_person_required</fullName>
        <active>true</active>
        <description>Checks for blank value when type= other</description>
        <errorConditionFormula>AND(  ISPICKVAL( Person_Type__c , &apos;Other&apos;),  ISBLANK( Other_people__c ))</errorConditionFormula>
        <errorMessage>Please enter text describing &quot;Other Person(s)&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Staff_person_required</fullName>
        <active>true</active>
        <description>Checks for tmn user value on save when type is staff</description>
        <errorConditionFormula>AND(ISPICKVAL(Person_Type__c, &apos;Staff&apos;), ISBLANK( Staff_Member__c ))</errorConditionFormula>
        <errorMessage>Please specify a Staff Member</errorMessage>
    </validationRules>
</CustomObject>